@@ -4,6 +4,7 @@ import nz.ac.canterbury.seng302.portfolio.model.User;
 import nz.ac.canterbury.seng302.shared.identityprovider.AuthState;
 import nz.ac.canterbury.seng302.shared.identityprovider.PaginatedUsersResponse;
 import nz.ac.canterbury.seng302.portfolio.service.UserAccountClientService;
+import nz.ac.canterbury.seng302.portfolio.utils.UserField;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
@@ -12,7 +13,6 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.ModelAndView;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Controller for user related pages excluding the current
@@ -36,20 +36,21 @@ public class UserController {
     @GetMapping("/users")
     public ModelAndView users(
             @AuthenticationPrincipal AuthState principal,
-            ModelAndView mv
-    ) {
-        int limit = 10;
-        PaginatedUsersResponse response = userAccountClientService.getUsers(0, limit);
-        List<User> usersList = response.getUsersList().stream().map(user -> new User(user)).collect(Collectors.toList());
-
+            ModelAndView mv) {
+                    
+                    int limit = 10;
+                    PaginatedUsersResponse response = userAccountClientService.getUsers(0, limit, UserField.valueOf("firstName".toUpperCase()), true);
+                    List<User> usersList = response.getUsersList().stream().map(User::new).toList();
         mv = new ModelAndView("userList");
         mv.addObject("usersList", usersList);
         mv.addObject("user", userAccountClientService.getUser(principal));
         mv.addObject("apiPrefix", apiPrefix);
         mv.addObject("page", (Integer) 0);
-        mv.addObject("limit", (Integer) 5);
+        mv.addObject("limit", (Integer) limit);
         mv.addObject("pages", (response.getResultSetSize() + limit - 1)/limit);
         mv.addObject("userCount", response.getResultSetSize());
+        mv.addObject("order", "firstName");
+        mv.addObject("asc", "asc");
         return mv;
     }
 
@@ -64,17 +65,20 @@ public class UserController {
             @AuthenticationPrincipal AuthState principal,
             @RequestParam Integer page,
             @RequestParam Integer limit,
-            ModelAndView mv
+            @RequestParam String order,
+            @RequestParam Integer asc
     ) {
-        PaginatedUsersResponse response = userAccountClientService.getUsers(page, limit);
-        List<User> usersList = response.getUsersList().stream().map(user -> new User(user)).collect(Collectors.toList());
+        PaginatedUsersResponse response = userAccountClientService.getUsers(page, limit, UserField.valueOf(order.toUpperCase()), asc==0);
+        List<User> usersList = response.getUsersList().stream().map(User::new).toList();
 
-        mv = new ModelAndView("userList::userListDataTable");
+        ModelAndView mv = new ModelAndView("userList::userListDataTable");
         mv.addObject("usersList", usersList);
         mv.addObject("page", page);
         mv.addObject("limit", limit);
         mv.addObject("pages", (response.getResultSetSize() + limit - 1)/limit);
         mv.addObject("userCount", response.getResultSetSize());
+        mv.addObject("order", order);
+        mv.addObject("asc", asc==0?"asc":"desc");
         return mv;
     }
 }
